offers first commit
