# src/api/offer/index.js
@@ -2,60 +2,49 @@
 const { Router } = require('express');
 const {
   addItem,
-  findByCategory, findById,
-  findByName,
+  findByCategory,
+  findByOfferId,
   findAll,
-  getAllCategories,
-  validateItemData,
+  validateOfferData,
   deleteItem,
   patchItem,
-} = require('../../models/item');
+} = require('../../models/offer');
 
 const router = Router();
 
 router.get('/', async (req, res) => {
-  console.log('try get all items');
+  console.log('try get all offered items');
   const { categoryName } = req.query;
-  const items = categoryName ? await findByCategory(categoryName) : await findAll();
-  if (!items) {
-    return res.status(404).json({ msg: 'Items were not found.' });
+  const offers = categoryName ? await findByCategory(categoryName) : await findAll();
+  if (!offers) {
+    return res.status(404).json({ msg: 'No Offered Items were  found.' });
   }
-  return res.json(items);
+  return res.json(offers);
 });
-router.get('/:itemId', async (req, res) => {
-  console.log('try get item');
-  const { itemId } = req.params;
-  console.log(`item id: ${itemId}`);
-  const item = await findById(itemId);
-  if (!item) {
-    return res.status(404).json({ msg: `Item with id ${itemId} was not found.` });
+router.get('/:offerId', async (req, res) => {
+  console.log('try get offer');
+  const { offerId } = req.params;
+  console.log(`item id: ${offerId}`);
+  const offer = await findByOfferId(offerId);
+  if (!offer) {
+    return res.status(404).json({ msg: `Offer of item with id ${offerId} was not found.` });
   }
-  return res.json(item);
-});
-router.get('/categories', async (req, res) => {
-  const categories = await getAllCategories();
-  console.log(categories);
-  return res.json({ categories });
+  return res.json(offer);
 });
 router.post('/', async (req, res) => {
   try {
     const data = req.body;
     try {
-      await validateItemData(data);
+      await validateOfferData(data);
     } catch (e) {
       return res.status(400).json({ error: e.message });
     }
-    console.log(`try add item by name ${data.itemName}`);
-    const isExist = await findByName(data.itemName);
-    if (isExist) {
-      return res.status(400).json({ msg: `Item name ${data.itemName} already exists. item name must be unique` });
-    }
-    console.log(`try add item with data ${JSON.stringify(data)}`);
-    const newItemId = await addItem(data);
+    console.log(`try add offer with data ${JSON.stringify(data)}`);
+    const newOfferId = await addItem(data);
 
     return res.json({
       msg: 'item was added to database successfully',
-      itemId: newItemId,
+      offerId: newOfferId,
     });
   } catch (e) {
     console.log(e.message);
@@ -63,32 +52,32 @@ router.post('/', async (req, res) => {
   }
 });
 
-router.delete('/:itemId', async (req, res) => {
-  console.log('try get item');
-  const { itemId } = req.params;
-  console.log(`item id: ${itemId}`);
-  const item = await findById(itemId);
-  if (!item) {
-    return res.status(404).json({ msg: `Item with id ${itemId} was not found.` });
+router.delete('/:offerId', async (req, res) => {
+  console.log('try get offer');
+  const { offerId } = req.params;
+  console.log(`item id: ${offerId}`);
+  const offer = await findByOfferId(offerId);
+  if (!offer) {
+    return res.status(404).json({ msg: `Offer with id ${offerId} was not found.` });
   }
-  await deleteItem(itemId);
-  return res.status(200).json({ msg: `item with id:${itemId} was deleted` });
+  await deleteItem(offerId);
+  return res.status(200).json({ msg: `Offer with id:${offerId} was deleted` });
 });
 
-router.patch('/:itemId', async (req, res) => {
+router.patch('/:offerId', async (req, res) => {
   try {
     console.log('try get item');
-    const { itemId } = req.params;
-    console.log(`item id: ${itemId}`);
-    const item = await findById(itemId);
-    if (!item) {
-      return res.status(404).json({ msg: `Item with id ${itemId} was not found.` });
+    const { offerId } = req.params;
+    console.log(`Offer id: ${offerId}`);
+    const offer = await findByOfferId(offerId);
+    if (!offer) {
+      return res.status(404).json({ msg: `Item with id ${offerId} was not found.` });
     }
     const data = req.body;
-    await patchItem(data, itemId);
+    await patchItem(data, offerId);
     return res.json({
       msg: 'item was updated in database successfully',
-      itemId,
+      offerId,
     });
   } catch (e) {
     console.log(e.message);
